--- a/Genetic_Algorithm.ipynb
+++ b/Genetic_Algorithm.ipynb
@@ -130,12 +130,12 @@
       "metadata": {
         "id": "tLCbFWkk_a9s"
       },
-      "execution_count": 118,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 22,
       "metadata": {
         "id": "R86tbz0Bp4yS"
       },
@@ -197,10 +197,10 @@
         "\n",
         "def mutate(child: Individual, p_mutate):\n",
         "    #if random.random() <= p_mutate:\n",
-        "    no_to_mutate = (5 * len(child.chromosome)) // 100\n",
+        "    no_to_mutate = (1 * len(child.chromosome)) // 100\n",
         "    for _ in range(no_to_mutate):\n",
         "        random_index = random.randint(0, 8519)\n",
-        "        \n",
+        "\n",
         "        child.chromosome[random_index] = int(not child.chromosome[random_index])\n",
         "\n",
         "    child.fitness = child.calculate_fitness()\n",
@@ -209,21 +209,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 23,
       "metadata": {
         "id": "2EDdN_y3qP7V",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a9d9465f-6e17-40c8-b341-528c4f6c8cc5"
+        "outputId": "29702828-a3db-4afb-ac1c-4fac0bc571a7"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.2395827053506489\n",
-            "0.2395827053506489\n"
+            "0.15552887937313575\n",
+            "0.15582405945348798\n"
           ]
         }
       ],
@@ -240,7 +240,8 @@
         "\n",
         "    boy, girl  = mate(papa,mama,1)\n",
         "    print(boy.fitness)\n",
-        "    print()\n",
+        "    new_boy = mutate(boy,1)\n",
+        "    print(new_boy.fitness)\n",
         "\n",
         "    \n",
         "\n",
@@ -256,7 +257,7 @@
       "metadata": {
         "id": "AHVxLcze5L9p"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     }
   ],
@@ -266,7 +267,7 @@
       "name": "Genetic  Algorithm.ipynb",
       "provenance": [],
       "mount_file_id": "1kO-jok7-8J5kdfGRDWn6wcGCcqp1mQhM",
-      "authorship_tag": "ABX9TyO42uVW5sTDfe8sl2dgRV7V",
+      "authorship_tag": "ABX9TyMRepzPqcLUBRNYy1Q18Klb",
       "include_colab_link": true
     },
     "kernelspec": {
