--- a/Genetic_Algorithm.ipynb
+++ b/Genetic_Algorithm.ipynb
@@ -93,7 +93,6 @@
         "                index = random.randint(0, 8519)\n",
         "            \n",
         "            genome[index] = 1\n",
-        "    \n",
         "                \n",
         "        return genome\n",
         "\n",
@@ -121,21 +120,23 @@
         "            if gene == 1:\n",
         "                fitness += tf_idf_mean[index]\n",
         "\n",
-        "        if np.count_nonzero(self.chromosome) > 2000:\n",
+        "        if np.count_nonzero(self.chromosome) > 3000:\n",
         "            percentage = ((np.count_nonzero(self.chromosome) // 100) / 100)\n",
-        "            fitness -= percentage * max_fitness\n",
+        "            fitness -= percentage/2 * max_fitness\n",
+        "            \n",
+        "            #fitness -= 0.3\n",
         "\n",
         "        return fitness"
       ],
       "metadata": {
         "id": "tLCbFWkk_a9s"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 4,
       "metadata": {
         "id": "R86tbz0Bp4yS"
       },
@@ -147,27 +148,14 @@
         "        genome = Individual.create_genome()\n",
         "        genome = Individual(genome)\n",
         "        \n",
-        "        #genome.genome_rejection()\n",
         "        genome.repair_genome()\n",
         "        \n",
         "        population.append(genome)  # population (list) consists Individual objects \n",
         "\n",
         "    return np.array(population)\n",
         "\n",
-        "# def roulette_wheel_selection(population: list):\n",
-        "    \n",
-        "#     population_fitness = sum([chromosome.fitness for chromosome in population])\n",
-        "    \n",
-        "#     s = 0\n",
-        "#     random_number = random.randint(0, int(population_fitness))\n",
-        "    \n",
-        "#     for individual in population:\n",
-        "#         s += individual.fitness\n",
-        "#         if s >= random_number:\n",
-        "#             return individual\n",
-        "\n",
         "def tournament_selection(population: list):\n",
-        "    k = 5\n",
+        "    k = 10\n",
         "    selected_parents = []\n",
         "    for individual in range(k):\n",
         "        index = random.randint(0, len(population) - 1)\n",
@@ -192,58 +180,72 @@
         "        papa.chromosome[points[1]:] = mama_copy[points[1]:]\n",
         "        mama.chromosome[points[1]:] = papa_copy[points[1]:]\n",
         "\n",
-        "    first_child, second_child = papa, mama\n",
+        "    first_child, second_child = Individual(papa.chromosome), Individual(mama.chromosome)\n",
+        "    first_child.fitness = first_child.calculate_fitness()\n",
+        "    second_child.fitness = second_child.calculate_fitness()\n",
+        "    \n",
         "    return first_child, second_child\n",
         "\n",
         "def mutate(child: Individual, p_mutate):\n",
-        "    #if random.random() <= p_mutate:\n",
-        "    no_to_mutate = (1 * len(child.chromosome)) // 100\n",
-        "    for _ in range(no_to_mutate):\n",
-        "        random_index = random.randint(0, 8519)\n",
+        "    if random.random() >= p_mutate:\n",
+        "        no_to_mutate = (5 * len(child.chromosome)) // 100\n",
+        "        for _ in range(no_to_mutate):\n",
         "\n",
-        "        child.chromosome[random_index] = int(not child.chromosome[random_index])\n",
+        "            random_index = random.randint(0, len(child.chromosome)-1)\n",
+        "            child.chromosome[random_index] = int(not child.chromosome[random_index])\n",
         "\n",
-        "    child.fitness = child.calculate_fitness()\n",
-        "    return child\n"
+        "    new_child = Individual(child.chromosome)\n",
+        "    new_child.fitness = new_child.calculate_fitness()\n",
+        "    return new_child\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
-        "id": "2EDdN_y3qP7V",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "29702828-a3db-4afb-ac1c-4fac0bc571a7"
+        "id": "2EDdN_y3qP7V"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0.15552887937313575\n",
-            "0.15582405945348798\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "def main():\n",
-        "    first_gen = initialize_population(100)\n",
+        "    generation = 1\n",
+        "    population = initialize_population(200)\n",
+        "    found = False\n",
         "    \n",
-        "    #sorted_arr = sorted(first_gen, key=lambda x: x.fitness, reverse = True)\n",
-        "    #for individual in sorted_arr:\n",
-        "     #   print(f\"{individual.fitness: <20}\\t {np.count_nonzero(individual.chromosome)} genes\")\n",
+        "    while not found:\n",
+        "        population = sorted(population, key = lambda x: x.fitness, reverse=True)\n",
+        "\n",
+        "        if population[0].fitness > 1.6:\n",
+        "            found = True\n",
+        "            break\n",
+        "\n",
+        "        new_generation = []\n",
+        "\n",
+        "        s = int((10*len(population)//100))\n",
+        "        new_generation.extend(population[:s])\n",
+        "\n",
+        "        s = int((90*len(population)//100))\n",
+        "        for _ in range(s//2):\n",
+        "\n",
+        "            first_parent, second_parent = tournament_selection(population)\n",
+        "            child1, child2 = mate(first_parent,second_parent,0.5)\n",
+        "            \n",
+        "            ch1 = mutate(child1,0.1)\n",
+        "            ch2 = mutate(child2,0.1)\n",
+        "            \n",
+        "            \n",
+        "            new_generation.append(ch1)\n",
+        "            new_generation.append(ch2)\n",
+        "        \n",
+        "        population = new_generation\n",
+        "\n",
+        "        print(f\"Generation: {generation}\\t Fitness: {population[0].fitness}\\t # of genes {np.count_nonzero(population[0].chromosome)}\")\n",
+        "        \n",
+        "        population = sorted(population, key = lambda x: x.fitness,reverse=True)\n",
+        "\n",
+        "        generation+=1\n",
         "\n",
         "\n",
-        "    papa, mama = tournament_selection(first_gen)\n",
-        "\n",
-        "    boy, girl  = mate(papa,mama,1)\n",
-        "    print(boy.fitness)\n",
-        "    new_boy = mutate(boy,1)\n",
-        "    print(new_boy.fitness)\n",
-        "\n",
-        "    \n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
@@ -255,9 +257,9 @@
         ""
       ],
       "metadata": {
-        "id": "AHVxLcze5L9p"
+        "id": "4cRGcEEvgZZ5"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     }
   ],
@@ -267,7 +269,7 @@
       "name": "Genetic  Algorithm.ipynb",
       "provenance": [],
       "mount_file_id": "1kO-jok7-8J5kdfGRDWn6wcGCcqp1mQhM",
-      "authorship_tag": "ABX9TyMRepzPqcLUBRNYy1Q18Klb",
+      "authorship_tag": "ABX9TyOSI3jfLDme/gsx4lD0gZ4K",
       "include_colab_link": true
     },
     "kernelspec": {
